--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,8 +1,8 @@
-<html>
-	<head>
-		<title>{{ title }}</title>
-	</head>
-	<body>
+{% extends "base.html" %}
+
+{% block content %}
 		<h1>Hello, {{ user.username }}!</h1>
-	</body>
-</html>
+		{% for post in posts %}
+		<div><p>{{ post.author.username }} says: <b> {{ post.body }}</b></p></div>
+		{% endfor %}
+{% endblock %}
