added wtf forms and tested login forms, added config

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		{%if title %}
+		{% if title %}
 		<title>{{ title }} - Farm Shops</title>
 		{% else %}
 		<title>Welcome to the Farm Shops app</title>
 		{% endif %}
 	</head>
 	<body>
-		<div> Farm Shop App: <a href="/index">Home</a></div>
+		<div>
+			<a href="{{ url_for('login') }}">Login</a>
+			<a href="{{ url_for('index') }}">Home</a>
+		</div>
 		<hr>
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+		<ul>
+			{% for message in messages %}
+			<li>{{ message }}</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		{% endwith %}
 		{% block content %}{% endblock %}
 	</body>
 </html>
