provided authentication and rbac mechanism

--- a/application/templates/forms/new_product.html
+++ b/application/templates/forms/new_product.html
@@ -9,7 +9,7 @@
 			{{ form.name(placeholder=product.name, size=120) }}
 		</div>	
 		<div>
-			<label for="quantity">Quantity</label>
+			<label for="quantity">Quantity (must be a number)</label>
 			{{ form.quantity(placeholder=product.quantity, size=120) }}
 		</div>
 		<input type="submit" value="Update Product">
